Fixes, search bar in all pages and configuration for testing on mobile

--- a/src/app/@shared/product-card/product-card.component.scss
+++ b/src/app/@shared/product-card/product-card.component.scss
@@ -5,7 +5,7 @@
 
 .card {
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 1.5px 1.5px 1.5px 0.5px rgba(0, 0, 0, 0.205);
   max-width: 240px;
   min-width: 240px;
