--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,15 +11,13 @@
 }
 
 .content {
-  // margin: 50px;
-  background-color: rgba(45, 45, 45, 0.5);
-  // padding: 20px;
+  background-color: rgb(255, 255, 255, 0.65);
   border-radius: 10px;
 }
 
 h2 {
   padding: 20px;
-  color: white;
+  color: black;
   font-weight: bolder;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -29,7 +27,7 @@ h2 {
   height: 3px;
   margin-top: -40px;
   margin-left: 25px;
-  background-color: white;
+  background-color: black;
 }
 
 
