--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -10,6 +10,7 @@
   height: fit-content;
   width: 100%;
   display:flex;
+  flex-direction: column;
   justify-content: center;
   padding: 15px;
   margin-top: 20px;
@@ -25,10 +26,10 @@
 
 .nav{
   background: rgba(45, 45, 45, 0.5);
-  height: 40px;
+  height: 60px;
   width: 100%;
   display:flex;
-  padding:10px 0px 5px;
+  padding:20px 0px 5px;
   justify-content: center;
 }
 
@@ -47,6 +48,17 @@
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.685);
   width: 100%;
+  padding: 5px;
+}
+
+.search2 {
+  outline: none;
+  border: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.829);
+  width: 100%;
+  height: 15px;
   padding: 5px;
 }
 
