--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -8,7 +8,7 @@
   min-height: 615px;
   margin: 10px;
   border-radius: 5px;
-  background-color: rgba(45, 45, 45, 0.5);
+  background-color: rgba(45, 45, 45, 0.85);
   color: white;
   height: fit-content;
 }
@@ -67,7 +67,7 @@ ul {
   flex-flow: row wrap;
   min-height: 510px;
   margin: 10px;
-  background-color: rgba(45, 45, 45, 0.5);
+  background-color: rgba(255, 255, 255, 0.65);
   border-radius: 10px;
   padding: 10px;
 }
